# CargoTrack

./: README.md
Backend/: .gitignore  alembic.ini  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 47c81a1bd623_make_email_unique_and_indexed.py  e1eddd514788_create_users_table.py
Backend/src/: config.py  database.py  main.py
Backend/src/core/: config.py
Backend/src/models/: users.py
Backend/src/repositories/: users.py
Backend/src/routes/: users.py
Backend/src/schemas/: users.py
Backend/src/services/: users.py
Backend/src/utils/: hash.py
Frontend/: index.jsx  package-lock.json  package.json
Frontend/components/: Login.jsx  LoginChoose.jsx  MainLoginHeader.jsx  header.jsx
Frontend/components/About/: page.jsx
Frontend/components/LoginChoose/: MainLoginHeader.jsx
Frontend/pages/: AdminLogin.jsx  AdminLoginPage.jsx  index.jsx
